--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     </header>
     <!-- end header part -->
+
     <!-- start main part -->
     <main>
 
@@ -265,6 +266,7 @@
 
         <!-- player card-details end -->
 
+
         <!-- high voltage match start-->
         <section class="high-volt">
             <div class="high-voltage">
@@ -283,8 +285,10 @@
             </div>
         </section>
 
-        <!--high volatge match end  -->
+        <!--high volatge match end ---
+        --------------------------- -->
 
+        <!-- news part strating -->
         <section>
             <div class="news-side">
                 <div class="news-title">
@@ -334,15 +338,16 @@
 
                     </div>
 
-
-
-
                 </div>
-
             </div>
-
         </section>
+
+        <!-- news part end  -->
     </main>
+    <!-- Main part end -->
+
+
+    <!-- Footer section start -->
     <footer>
         <div class="footer-content">
             <div class="foot-img">
@@ -362,6 +367,7 @@
             </div>
         </div>
     </footer>
+    <!-- footer section end -->
 
 </body>
 
